--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  background: url('./assets/bg6.jpg');
+	background-repeat: no-repeat;
+	background-size:cover;
+  backdrop-filter: blur(1px);
 }
 
 html {
@@ -52,7 +56,7 @@ a {
 }
 
 a:hover {
-  color: grey;
+  color: #AF2655;
   text-decoration: underline;
   text-underline-offset: 1rem;
   text-decoration-color: rgb(181, 181, 181);
@@ -60,6 +64,7 @@ a:hover {
 
 .logo {
   font-size: 2rem;
+  font-weight: 800;
 }
 
 .logo:hover {
@@ -70,6 +75,8 @@ a:hover {
 
 #hamburger-nav {
   display: none;
+  position: relative;
+  
 }
 
 .hamburger-menu {
@@ -97,11 +104,14 @@ a:hover {
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background:rgba(255, 255, 255, 0.1);
   width: fit-content;
   max-height: 0;
+  backdrop-filter: blur(15px);
   overflow: hidden;
   transition: all 0.3 ease-in-out;
+  margin-top: 10px;
+  z-index: 10;
 }
 
 .menu-links a {
@@ -150,7 +160,7 @@ a:hover {
 
 section {
   padding-top: 4vh;
-  height: 96vh;
+  /* height: 96vh; */
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
@@ -161,23 +171,41 @@ section {
 }
 
 /* PROFILE SECTION */
-
 #profile {
   display: flex;
   justify-content: center;
   gap: 5rem;
-  height: 80vh;
+  height: 90vh;
 }
+
 
 .section__pic-container {
   display: flex;
-  height: 400px;
-  width: 400px;
+  height: 250px;
+  width: 250px;
   margin: auto 0;
 }
 
+.section__pic-container img{
+  animation: animate 5s ease-in-out infinite;
+  transition: all 1s ease-in-out;
+  border-radius: 50%;
+}
+@keyframes animate{
+  0%{
+    border-radius: 60% 50% 30% 70%/60% 30% 80% 40%;
+  }
+  50%{
+    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+  }
+  100%{
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 60%;
+  }
+}
+
 .section__text {
-  align-self: center;
+  margin-top: 110px;
+  /* align-self: center; */
   text-align: center;
 }
 
@@ -186,6 +214,7 @@ section {
 }
 
 .section__text__p1 {
+  margin-top: 25px;
   text-align: center;
 }
 
@@ -224,30 +253,25 @@ section {
 .btn {
   font-weight: 600;
   transition: all 300ms ease;
-  padding: 1rem;
-  width: 8rem;
+  /* padding: 1rem;
+  width: 8rem; */
   border-radius: 2rem;
 }
 
-.btn-color-1,
+
 .btn-color-2 {
   border: rgb(53, 53, 53) 0.1rem solid;
 }
 
-.btn-color-1:hover,
 .btn-color-2:hover {
   cursor: pointer;
 }
 
-.btn-color-1,
 .btn-color-2:hover {
   background: rgb(53, 53, 53);
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
-.btn-color-1:hover {
-  background: rgb(0, 0, 0);
-}
 
 .btn-color-2 {
   background: none;
@@ -265,17 +289,20 @@ section {
 
 #about {
   position: relative;
+  margin-bottom: 4rem;
+  height: 80vh;
 }
 
 .about-containers {
   gap: 2rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .about-details-container {
   justify-content: center;
   flex-direction: column;
+  padding-top: 50px;
 }
 
 .about-containers,
@@ -305,80 +332,219 @@ section {
 
 .section-container {
   gap: 4rem;
-  height: 80%;
+  height: 75%;
 }
 
 .section__pic-container {
   height: 400px;
   width: 400px;
-  margin: auto 0;
+  margin: 50px 0;
 }
 
 /* EXPERIENCE SECTION */
 
-#experience {
+.timeline-section{
+  /* background-color: #24292d; */
+  min-height: 100vh;
+  padding: 75px 15px;
+  margin-bottom: 35px;
+  position: relative;
+}
+.timeline-section h1{
+  margin-bottom: 30px;
+}
+
+.timeline-items{
+max-width: 1000px;
+margin: auto;
+display: flex;
+flex-wrap: wrap;
+position: relative;
+}
+
+.timeline-items::before{
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 2px;
+  background-color: #2f363e;
+  left: calc(50% - 1px);
+}
+
+.timeline-item{
+  width: 100%;
+  margin-bottom: 20px;
   position: relative;
 }
 
-.experience-sub-title {
-  color: rgb(85, 85, 85);
-  font-weight: 600;
-  font-size: 1.75rem;
-  margin-bottom: 2rem;
+.timeline-item:last-child{
+  margin-bottom: 0;
 }
 
-.experience-details-container {
+.timeline-item:nth-child(odd){
+  padding-right: calc(50% + 30px);
+  text-align: right;
+}
+
+.timeline-item:nth-child(even){
+  padding-left: calc(50% + 30px);
+}
+
+.timeline-dot{
+  height: 16px;
+  width: 16px;
+  background-color: #AF2655;
+  position: absolute;
+  left: calc(50% - 8px);
+  border-radius: 50%;
+  top: 10px;
+}
+
+.timeline-content{
+  padding: 15px;
+  border-radius: 8px;
+  background-color:rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(15px);
+}
+
+.timeline-content h3{
+font-size: 20px;
+margin: 0 0 10px;
+text-transform: capitalize;
+}
+
+.timeline-content p{
+  color: rgba(0, 0, 0, 0.516);
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 20px
+}
+
+
+
+/* skills */
+
+
+.skill-container{
+  position: relative;
+  min-height: 82vh;
+  width: 100%;
+} 
+
+.row{
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	margin-top: 70px;
+}
+.row .col{
+	flex-basis: 46%;
+}
+.row .sub-title h2{
+	position: relative;
+	color: #242223;
+	font-size: 22px;
+	display: inline-block;
+	margin-bottom: 30px;
+}
+.row .sub-title h2::before{
+	content: '';
+	position: absolute;
+	width: 50%;
+	height: 1px;
+	top: 125%;
+	left: 0;
+	background-color: #808080;
+}
+.row .sub-title h2::after{
+	content: '';
+	position: absolute;
+	width: 25%;
+	height: 3px;
+	top: calc(125% - 1px);
+	left: 0;
+	background-color: #d03645;
+}
+
+.skill{
+  margin-top: 15px;
+}
+.subject{
+	font-size: 18px;
+	font-weight: thin;
+	color: #808080;
+	padding-bottom: 13px;
+	text-transform: uppercase;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-between;
 }
 
-.article-container {
-  display: flex;
-  text-align: initial;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 2.5rem;
-  justify-content: space-around;
+.progress{
+  height: 7px;
+  background-color:rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(15px);
+  box-shadow: 0 5px 5px gray;
+  
+}
+.progress-bar{
+  background-color: #AF2655;
+  border-radius: 50px;
 }
 
-article {
-  display: flex;
-  width: 10rem;
-  justify-content: space-around;
-  gap: 0.5rem;
+.progress .progress-bar{
+  animation: animate-positive 2s;
 }
 
-article .icon {
-  cursor: default;
+@-webkit-keyframes animate-positive{
+   0%{
+    width: 0;
+   }
 }
 
-/* PROJECTS SECTION */
+@keyframes animate-positive{
+  0%{
+    width: 0;
+  }
+}
 
-#projects {
+
+/* Project section */
+#project{
   position: relative;
 }
 
-.color-container {
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+.carousel-item::before{
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background:#000;
+  opacity: 0.5;
 }
 
-.project-img {
-  border-radius: 2rem;
-  width: 90%;
-  height: 90%;
+.carousel-caption h5{
+  font-size: 50px;
+  font-weight: 700;
 }
 
-.project-title {
-  margin: 1rem;
-  color: black;
+.carousel-caption p{
+  font-size: 18px;
+  top:2rem;
+  color: #ffff;
 }
 
-.project-btn {
-  color: black;
-  border-color: rgb(163, 163, 163);
+
+.slider-btn .btn{
+  background-color: #e74c3c;
+  color: white;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  border-radius: 1rem;
 }
+
 
 /* CONTACT */
 
@@ -386,7 +552,8 @@ article .icon {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 70vh;
+  height: 60vh;
+  margin-top: 4rem;
 }
 
 .contact-info-upper-container {
@@ -396,7 +563,7 @@ article .icon {
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
   background: (250, 250, 250);
-  margin: 2rem auto;
+  margin: 5rem auto;
   padding: 0.5rem;
 }
 
@@ -420,6 +587,10 @@ article .icon {
   height: 2.5rem;
 }
 
+.para{
+  margin-bottom: 0;
+}
+
 /* FOOTER SECTION */
 
 footer {
@@ -430,3 +601,17 @@ footer {
 footer p {
   text-align: center;
 }
+
+/* Animation */
+.animated {
+  opacity: 0;
+  transform: translateY(0px);
+  transition: opacity 1.2s ease-in-out, transform 1.2s ease-in-out;
+}
+
+.animated.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
