--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -12,8 +12,7 @@
   .about-containers {
     flex-wrap: wrap;
   }
-  #contact,
-  #projects {
+  #contact{
     height: fit-content;
   }
   .timeline-section {
@@ -21,6 +20,22 @@
     margin-bottom: 20px;
 }.skill-container{
   min-height: 65vh;
+}
+.portfolio-layer h4 {
+  font-size: 1.5rem; /* Decrease heading font size */
+}
+
+.portfolio-layer p {
+  font-size: 0.7rem; /* Decrease paragraph font size */
+}
+
+.portfolio-layer a {
+  width: 3rem; /* Decrease link size */
+  height: 3rem;
+}
+
+.portfolio-layer a i {
+  font-size: 1.3rem; /* Decrease icon size */
 }
 }
 
@@ -79,6 +94,26 @@
     min-height: 70vh;
     margin-bottom: 2rem;
   }
+  .portfolio-box img{
+    width: 100%;
+    height: 18rem;
+  }
+  .portfolio-layer h4 {
+    font-size: 1.4rem; /* Decrease heading font size */
+  }
+  
+  .portfolio-layer p {
+    font-size: 0.7rem; /* Decrease paragraph font size */
+  }
+  
+  .portfolio-layer a {
+    width: 3rem; /* Decrease link size */
+    height: 3rem;
+  }
+  
+  .portfolio-layer a i {
+    font-size: 1.3rem; /* Decrease icon size */
+  }
 }
 
 @media (max-width:1050px){
@@ -103,6 +138,22 @@
   }#experience{
     min-height: 65vh;
 }
+.portfolio-layer h4 {
+  font-size: 1.2rem; /* Decrease heading font size */
+}
+
+.portfolio-layer p {
+  font-size: 0.6rem; /* Decrease paragraph font size */
+}
+
+.portfolio-layer a {
+  width: 3rem; /* Decrease link size */
+  height: 3rem;
+}
+
+.portfolio-layer a i {
+  font-size: 1.3rem; /* Decrease icon size */
+}
 }
 @media(max-width:800px){
 
@@ -117,7 +168,7 @@
 }
 
 
-@media(max-width:767px){
+@media screen and (max-width:768px){
   .timeline-section{
     min-height: 80vh;
   }
@@ -137,18 +188,37 @@
   .timeline-dot{
     left: 0;
   }
-  .carousel-caption h5 {
-    font-size: 30px;
-    font-weight: 700;
+.portfolio-container {
+  flex-direction: column; /* Stack items vertically */
 }
-.carousel-caption p {
-  font-size: 10px;
-  top: 2rem;
-  color: #ffff;
+
+.portfolio-box {
+  width: 100%; /* Make each portfolio box full width */
+  margin-bottom: 2rem; /* Add some space between each box */
 }
-.slider-btn .btn {
-  font-size: 1rem;
-  padding: 0.5rem;
+
+.portfolio-box img {
+  height: auto; /* Allow image height to adjust based on width */
+}
+
+.portfolio-layer {
+  padding: 1rem; /* Reduce padding */
+}
+.portfolio-layer h4 {
+  font-size: 1.8rem; /* Decrease heading font size */
+}
+
+.portfolio-layer p {
+  font-size: 1rem; /* Decrease paragraph font size */
+}
+
+.portfolio-layer a {
+  width: 3rem; /* Decrease link size */
+  height: 3rem;
+}
+
+.portfolio-layer a i {
+  font-size: 1.3rem; /* Decrease icon size */
 }
 }
 
@@ -252,19 +322,6 @@
   height: 83vh;
   margin-bottom: 5rem;
 }
-.slider-btn .btn {
-  font-size: 0.5rem;
-  padding: 0.5rem;
-}
-.carousel-caption h5 {
-  font-size: 20px;
-  font-weight: 700;
-}
-.carousel-caption p {
-font-size: 8px;
-top: 2rem;
-color: #ffff;
-}
 }
 
 @media screen and (max-width: 380px) {
@@ -277,18 +334,36 @@ color: #ffff;
   height: 100vh;
   margin-bottom: 4rem;
 }
-.carousel-caption h5 {
-  font-size: 10px;
-  font-weight: 700;
 }
-.carousel-caption p {
-font-size: 5px;
-top: 2rem;
-color: #ffff;
+
+
+/* For screens smaller than 576px */
+@media (max-width: 576px) {
+  .portfolio-layer h4 {
+    font-size: 1.5rem; /* Decrease heading font size */
+  }
+  
+  .portfolio-layer p {
+    font-size: 0.8rem; /* Decrease paragraph font size */
+  }
+  
+  .portfolio-layer a {
+    width: 4rem; /* Decrease link size */
+    height: 4rem;
+  }
+  
+  .portfolio-layer a i {
+    font-size: 1.5rem; /* Decrease icon size */
+  }
 }
-.slider-btn .btn {
-font-size: 10px;
-/* padding: 0.5rem; */
-border-radius: 15%;
-}
+
+/* For screens smaller than 400px */
+@media (max-width: 400px) {
+  .portfolio-layer h4 {
+    font-size: 1.1rem; /* Decrease heading font size further */
+  }
+  
+  .portfolio-layer p {
+    font-size: 0.5rem; /* Decrease paragraph font size further */
+  }
 }
