--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ nav {
   gap: 2rem;
   list-style: none;
   font-size: 1.5rem;
+  font-weight: 500;
 }
 
 a {
@@ -509,41 +510,82 @@ text-transform: capitalize;
 
 
 /* Project section */
-#project{
+
+.portfolio-container{
+  display: flex;
+  align-items: center;
+  gap: 2.5rem;
+  /* grid-template-columns: repeat(3, 1fr); */
+  margin-top: 50px;
+}
+
+.portfolio-container .portfolio-box{
   position: relative;
+  border-radius: 2rem;
+  box-shadow: 0 0 1rem #242223;
+  overflow: hidden;
+  display: flex; 
 }
 
-.carousel-item::before{
-  content: "";
-  display: block;
+.portfolio-box img{
+  width: 100%;
+  height: 20rem;
+  opacity: 0.8;
+  transition: .5s ease;
+}
+
+.portfolio-box:hover img{
+  transform: scale(1.1);
+}
+
+.portfolio-box .portfolio-layer{
   position: absolute;
-  top: 0;
   bottom: 0;
-  right: 0;
   left: 0;
-  background:#000;
-  opacity: 0.5;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 4rem;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), #DCF2F1 );
+  transform: translateY(100%);
+  transition: .5s ease;
 }
 
-.carousel-caption h5{
-  font-size: 50px;
-  font-weight: 700;
+.portfolio-box:hover .portfolio-layer{
+  transform: translateY(0);
 }
 
-.carousel-caption p{
-  font-size: 18px;
-  top:2rem;
-  color: #ffff;
+.portfolio-layer h4{
+  font-size: 2rem;
+  color: #0F1035;
+}
+
+.portfolio-layer p{
+  font-size: .9rem;
+  margin: .3rem 0 1rem;
+  color: #242223;
+  font-weight: 500;
+}
+
+.portfolio-layer a{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+}
+
+.portfolio-layer a i{
+  font-size: 2rem;
+  color: #2f363e;
 }
 
 
-.slider-btn .btn{
-  background-color: #e74c3c;
-  color: white;
-  font-size: 1.5rem;
-  padding: 0.5rem;
-  border-radius: 1rem;
-}
 
 
 /* CONTACT */
